# SHIFTtest

./: Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
app/: run.py
app/backend/: Base.py  async_database.py
app/migrations/: env.py
app/migrations/versions/: 94efb7cad6a6_init.py
app/models/: Employee.py
app/routers/: EmployeeSalaryRouter.py
app/static/: default_page.css  default_page.js
app/templates/: default_page.html
backend/: async_database.py
migrations/: env.py
routers/: EmployeeSalaryRouter.py
static/: default_page.css  default_page.js
templates/: default_page.html
